--- a/myntra/src/Components/CompnentsT/Product.module.css
+++ b/myntra/src/Components/CompnentsT/Product.module.css
@@ -7,7 +7,8 @@
     justify-content: space-evenly;
     /* padding-left: 30px; */
     /* padding-right: 0%; */
-    border: 1px solid red;
+    /* border: 1px solid red; */
+    /* border-left: 1px solid gray; */
     /* position: absolute;
     top: 16%; */
 }
