--- a/myntra/src/Components/CompnentsT/Product.module.css
+++ b/myntra/src/Components/CompnentsT/Product.module.css
@@ -12,3 +12,13 @@
     /* position: absolute;
     top: 16%; */
 }
+
+/* @media  (min-width: 1250) {
+        .productList {
+            width: 82%;
+            margin-left: 18%;   
+            display: grid;
+            grid-template-columns: repeat(3,1fr);
+            justify-content: space-evenly;
+        }
+  } */
