--- a/myntra/src/Components/CompnentsT/ProductCard.module.css
+++ b/myntra/src/Components/CompnentsT/ProductCard.module.css
@@ -7,6 +7,7 @@
     margin-bottom: 50px;
     position: relative;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    transition: 0.5s ease-in-out;
 }
 
 
@@ -68,5 +69,11 @@
 }
 .card:hover {
     scale: 1.1;
-    transition: 0.5s ease-in-out;
+    
 }
+
+/* @media (min-width: 1250px){
+    .card{
+        width: 200px;
+    }
+} */
