--- a/myntra/src/Components/CompnentsT/Product.module.css
+++ b/myntra/src/Components/CompnentsT/Product.module.css
@@ -22,3 +22,9 @@
             justify-content: space-evenly;
         }
   } */
+
+  .loading {
+    position: absolute;
+    /* top: 30%; */
+    right: 15%;
+  }
