--- a/myntra/src/PagesT/ProductDetail.module.css
+++ b/myntra/src/PagesT/ProductDetail.module.css
@@ -4,12 +4,12 @@
     height: auto;
     display: flex;
     justify-content: space-between;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     gap: 2%;
 }
 .images{
     width: 60%;
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
@@ -37,9 +37,9 @@
     width: 100%;
     border: 0.5px solid gray;
 }
-.details  p {
-    color: gray;
-}
+/* .details {
+    color:#FF3E6C;
+} */
 .buttons {
     width: 50%;
     display: flex;
@@ -55,8 +55,9 @@
 .cartAdd {
     margin-top: 50px;
     display: flex;
-    width: 70%;
+    width: 80%;
     justify-content: space-between;
+    gap: 10%;
 }
 
 .cartAdd button:nth-child(1) {
@@ -66,4 +67,31 @@
     /* border: 1px solid red; */
     background-color: #FF3E6C;
     color: white;
+}
+
+.off_price {
+    text-decoration: line-through;
+    font-size: 15px;
+    color: gray;
+}
+
+.dis {
+    margin-left: 5px;
+    font-size: 15px;
+    color: #FF3E6C;
+}
+
+.wish {
+    width: 40%;
+    border: 1px solid black;
+}
+
+.discription {
+    color: black;
+
+}
+
+.opt {
+   text-align: left;
+    
 }
