--- a/myntra/src/Components/CompnentsT/Sidebar.module.css
+++ b/myntra/src/Components/CompnentsT/Sidebar.module.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-top: 1px solid gray;
     border-right: 1px solid gray;
 }
 /* .side {
