--- a/myntra/src/PagesA/CartPayment.module.css
+++ b/myntra/src/PagesA/CartPayment.module.css
@@ -13,7 +13,7 @@
     height: 20vh; */
     
     .container{
-        border: 3px solid pink;
+        /* border: 3px solid pink; */
         height: 79px;
         width: 90%;
         margin:auto;
@@ -141,7 +141,7 @@
     .offershead{
         padding-left: 4px;
         width: 100%;
-        height: 17px;
+        /* height: 17px; */
         color: #535766;
         margin: 0px 0px 3px;
         /* border: 1px solid salmon; */
@@ -152,7 +152,7 @@
 
     .offersheadcre{
         width: 100%;
-        height: 17px;
+        /* height: 17px; */
         color: #535766;
         margin: 0px 0px 3px;
         /* border: 1px solid salmon; */
@@ -206,7 +206,7 @@
 
 
 .proditemcardlist{
-    height: 100px;
+    /* height: 100px; */
     width: 100%;
       /* border: 0.5px solid red; */
 }
@@ -410,7 +410,7 @@ td{
 }
 
 
-@media screen and (min-width:360px) and (max-width:576px) {
+@media screen and (min-width:260px) and (max-width:676px) {
     .twosections{
         display: block;
         /* flex-direction: column; */
@@ -419,14 +419,26 @@ td{
           /* height: 50px; */
       }
       .leftdiv{
-        border: 5px solid green;
+        /* border: 5px solid green; */
           /* border-right: .5px solid #535766; */
-          height: 100px;
+          /* height: 100px; */
           width: 90%;
           padding: 32px 20px 0px 0px
       }
+
+      .proditemcardcard{
+        height: 195px;
+        width: 594px;
+        background-color: white;
+        padding: 12px 12px 0px;
+        display: flex;
+        border-radius: 3px;
+        /* border: 1px solid gray; */
+        margin-bottom: 15px;
+    }
+
       .add_details{
-          border: 1px solid gray ;
+          /* border: 1px solid gray ; */
           border-radius: 3px;
           background-color: #ffffff;
           margin: 0px 0px 8px;
@@ -447,10 +459,11 @@ td{
       
       
       .rightdiv{
+        margin-top: 50px;
           border-left: .5px solid #535766;
-          height: 100px;
+          /* height: 100px; */
           width: 90%;
-          border: 4px solid red;
+          /* border: 4px solid red; */
           padding: 24px 0px 0px 16px;
       }      
     
