--- a/myntra/src/Components/CompnentsT/Product.module.css
+++ b/myntra/src/Components/CompnentsT/Product.module.css
@@ -1,27 +1,42 @@
+
+* {
+  box-sizing: border-box;
+}
+
 .productList {
     width: 82%;
     margin-left: 18%;
     display: grid;
     grid-template-columns: repeat(5, 17%);
-    /* column-gap: 40px; */
     justify-content: space-evenly;
-    /* padding-left: 30px; */
-    /* padding-right: 0%; */
-    /* border: 1px solid red; */
-    border-left: 1px solid gray;
-    /* position: absolute;
-    top: 16%; */
+  
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (min-width: 577px) and (max-width: 876px) {
         .productList {
-            /* width: 82%;
-            margin-left: 18%;    */ 
+            box-sizing: border-box;
+            /* width: 60%; */
+            margin-left: 18%;    
             display: grid;
-            grid-template-columns: repeat(3,1fr);
-            justify-content: space-evenly;
+            grid-template-columns: repeat(2,1fr);
+            /* justify-content: space-around; */
+            column-gap: 10px;
         }
   }
+
+  @media screen and (min-width: 336px) and (max-width: 576px) {
+    .productList {
+         width: 40%;
+        margin-left: 30%;    
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        justify-content: space-evenly;
+        border: none;
+    }
+}
+
+  
+
 
   .loading {
     position: absolute;
