--- a/myntra/src/Upage/AdminPage.css
+++ b/myntra/src/Upage/AdminPage.css
@@ -15,7 +15,7 @@
         gap: 1%;
 }
 .card{
-    width: 20%;
+    /* width: 20%; */
     height: auto;
     /* border: 1px solid red; */
     font-size: 90%;
@@ -26,9 +26,17 @@
 .qty{
     /* border: 1px solid red; */
    width: 100%;
-    height: 15%;
+    /* height: 15%; */
+   
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
 /* .tab{
     font-size: 40%;
 } */
+
+.tabs{
+    margin-left: 10%;
+    border: 1px solid red;
+}
