--- a/myntra/src/Components/CompnentsT/Product.module.css
+++ b/myntra/src/Components/CompnentsT/Product.module.css
@@ -15,18 +15,18 @@
 @media screen and (min-width: 577px) and (max-width: 876px) {
         .productList {
             box-sizing: border-box;
-            /* width: 60%; */
+            width: 80%;
             margin-left: 18%;    
             display: grid;
-            grid-template-columns: repeat(2,1fr);
+            grid-template-columns: repeat(3,1fr);
             /* justify-content: space-around; */
-            column-gap: 10px;
+            /* column-gap: 10px; */
         }
   }
 
   @media screen and (min-width: 336px) and (max-width: 576px) {
     .productList {
-         width: 40%;
+         width: 50%;
         margin-left: 30%;    
         display: grid;
         grid-template-columns: repeat(1,1fr);
