--- a/myntra/src/Components/CompnentsT/ProductCard.module.css
+++ b/myntra/src/Components/CompnentsT/ProductCard.module.css
@@ -79,7 +79,8 @@
 
 @media screen and (min-width: 336px) and (max-width: 576px){
     .card{
-        width: 200px;
+        width: 250px;
+        height: 450px;
     }
 }
 
@@ -87,6 +88,28 @@
 @media screen and (min-width: 577px) and (max-width: 876px){
     .card{
         width: 100px;
-        height: 170px; 
+        height: 250px; 
+        position: relative;
     }
+
+    .brand {
+        position: absolute;
+        top: 70%;
+    
+    }
+    .price {
+    position: absolute;
+    top: 95%;
+}
+
+.wishlist {
+    position: absolute;
+    top: 65%;
+    width: 100%;
+    height: 60px;
+    background-color: white;
+    display: none;
+    transition: 0.5s ease-in-out;
+   
+}
 }
