--- a/myntra/src/PagesT/ProductDetail.module.css
+++ b/myntra/src/PagesT/ProductDetail.module.css
@@ -13,6 +13,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 10px;
+
 }
 .images img {
     width: 100%;
@@ -107,8 +108,12 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
+     
     } 
-  
+    .details {
+        position: fixed ;
+        left: 55%;
+    }
  } 
 
 
@@ -120,6 +125,11 @@
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
+        /* overflow: scroll; */
+    }
+    .details {
+        position: fixed ;
+        left: 55%;
     }
     .cartAdd button:nth-child(1){
         font-size: 7px;
